--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muff-Mojo</title>
+    <link rel="icon" href="cup.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +51,7 @@
 
     <!-- Modern Search Bar Section -->
     <section id="search-bar">
-        <h2>Muff-Mojo 🧁</h2>
+        <h2>Muff-Mojo🧁</h2>
         <div class="search-container">
             <input type="text" id="emoji-search" placeholder="Try out your emoji..." onkeydown="checkEnter(event)">
             <button id="search-button" onclick="searchEmoji()">Search</button>
