designed the page

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto|Outlier:wght@400&display=swap" rel="stylesheet">
+    <style>
+        
+
+    </style>
 </head>
 <body>
 
     <!-- Header -->
     <header>
-        <h1><a href="#search-bar" style="text-decoration: none; outline: none;">Muff-Mojo <span>🧁</span></a></h1>
+        <h1><a href="#search-bar" style="text-decoration: none; outline: none; color: #333;">Muff-Mojo <span>🧁</span></a></h1>
         <nav>
             <a href="#about-me">About</a>
             <a href="#search-bar">Search</a>
@@ -38,13 +42,13 @@
     <!-- How It Works Section -->
     <section id="how-it-works">
         <div class="work-text">
-            <h2>How It Works</h2>
+            <h2>How It Works?</h2>
         </div>
         <ul>
-            <li class="instruction" data-emoji="😀">All the emojis a word AWAY! 😀 😁 😎 ❤️ 💥 🎉 🥳 🌟 </li>
-            <li class="instruction" data-emoji="🔍">Type the name of the emoji you want, and it’ll appear as a tooltip. </li>
             <li class="instruction" data-emoji="⚙️">The extension will detect words and show related emojis. </li>
+            <li class="instruction" data-emoji="🔍">Type the name of the emoji you want, and it’ll appear as a tooltip. </li>
             <li class="instruction" data-emoji="⬆️">Press the Up Arrow key to select your emoji.</li>
+            <li class="instruction" data-emoji="😀">All the emojis a word AWAY! 😀 😁 😎 ❤️ 💥 🎉 🥳 🌟 </li> 
             <li class="instruction" data-emoji="🗨️">Available for Whatsapp. Stay Tuned for Future Iterations!</li>
         </ul>
     </section>
