added the instagram feature

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <li class="instruction" data-emoji="🔍">Type the name of the emoji you want, and it’ll appear as a tooltip. </li>
             <li class="instruction" data-emoji="⬆️">Press the Up Arrow key to select your emoji.</li>
             <li class="instruction" data-emoji="😀">All the emojis a word AWAY! 😀 😁 😎 ❤️ 💥 🎉 🥳 🌟 </li> 
-            <li class="instruction" data-emoji="🗨️">Available for Whatsapp. Stay Tuned for Future Iterations!</li>
+            <li class="instruction" data-emoji="🗨️">Available for your favourite socials, <p>be it Instagram or Whatsapp.We've got it all covered.</p></li>
+            <li class="instruction" data-emoji="🔮">Stay tuned for future updates </li> 
+
         </ul>
     </section>
 
