--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Header -->
     <header>
-        <h1><a href="#search-bar" style="text-decoration: none; outline: none; color: #333;">Muff-Mojo <span>🧁</span></a></h1>
+        <h1><a href="https://chromewebstore.google.com/detail/muff-mojo-%F0%9F%A7%81/pbngdkapkjlkimhjhbkdcfppegcknjke" target= "_blank" style="text-decoration: none; outline: none; color: #333;">Muff-Mojo <span>🧁</span></a></h1>
         <nav>
             <a href="#about-me">About</a>
             <a href="#search-bar">Search</a>
