--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#about-me">About</a>
             <a href="#search-bar">Search</a>
             <a href="#how-it-works">How It Works?</a>
-            <a href="#premium">Premium</a>
+            <a href="https://chromewebstore.google.com/detail/muff-mojo-%F0%9F%A7%81/pbngdkapkjlkimhjhbkdcfppegcknjke" target="_blank">Download</a>
         </nav>
     </header>
 
